--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
- <head>
- 	<!-- link stylesheet in folder css -->
- 	<link rel="stylesheet" type="text/css" href="/css/best-selling.css">
- 	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
- 	<link rel="stylesheet" type="text/css" href="/css/custom_layout.css">
- 	<link rel="stylesheet" type="text/css" href="/css/detail.css">
- 	<link rel="stylesheet" type="text/css" href="/css/flexslider.css">
- 	<link rel="stylesheet" type="text/css" href="/css/google_italic.css">
- 	<link rel="stylesheet" type="text/css" href="/css/lift.css">
- 	<link rel="stylesheet" type="text/css" href="/css/login.css">
- 	<link rel="stylesheet" type="text/css" href="/css/look_page_1.css">
- 	<link rel="stylesheet" type="text/css" href="/css/look_page_2.css">
- 	<link rel="stylesheet" type="text/css" href="/css/portfolio-component.css">
- 	<link rel="stylesheet" type="text/css" href="/css/portfolio-default.css">
- 	<link rel="stylesheet" type="text/css" href="/css/price_range.css">
- 	<link rel="stylesheet" type="text/css" href="/css/price_range_custom.css">
- 	<link rel="stylesheet" type="text/css" href="/css/profile.css">
- 	<link rel="stylesheet" type="text/css" href="/css/profile_1.css">
- 	<link rel="stylesheet" type="text/css" href="/css/register.css">
- 	<link rel="stylesheet" type="text/css" href="/css/reward.css">
- 	<link rel="stylesheet" type="text/css" href="/css/slider.css">
- 	<link rel="stylesheet" type="text/css" href="/css/style.css">
- 	<link rel="stylesheet" type="text/css" href="/css/tuto.css">
- 	<link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
- 	<!-- link stylesheet in folder font style -->
- 	<link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.css">
- 	<link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css">
- 	<!-- link JavaScript in folder js -->
- 	<!-- [loading scripts] -->
-   	<script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta charset="utf-8">
+    <!-- [portable options] -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <!-- [SEO] -->
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Lukas Postulka, http://themeforest.net/user/lukepostulka">
+    <title>Safir - Mobile</title>
+    <!-- [loading stylesheets] -->
+    <link type="text/css" rel="stylesheet" href="/css/style.css" />
+	<link type="text/css" rel="stylesheet" href="/css/custom_layout.css" />
+    <link type="text/css" rel="stylesheet" href="/css/flexslider.css" />
+    <link type="text/css" rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" />
+    <link type="text/css" rel="stylesheet" href="/css/price_range.css" />
+    <link type="text/css" rel="stylesheet" href="/css/price_range_custom.css" />
+    <link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/login.css">
+    <link rel="stylesheet" type="text/css" href="/css/detail.css">
+    <link rel="stylesheet" type="text/css" href="/css/best_selling.css">
+    <link rel="stylesheet" type="text/css" href="/css/register.css">
+    <link rel="stylesheet" type="text/css" href="/css/profile.css">
+    <link rel="stylesheet" type="text/css" href="/css/profile_1.css">
+    <link rel="stylesheet" type="text/css" href="/css/lift.css">
+    <link rel="stylesheet" type="text/css" href="/css/tuto.css">
+    <link rel="stylesheet" type="text/css" href="/css/reward.css">
+ 	<!-- Script -->
+    <script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="/js/jquery.touchswipe.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.flexslider-min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="/js/jquery.flexslider-min.js"></script>
     <script type="text/javascript" src="/js/price_range.js"></script>
     <script type="text/javascript" src="/js/swiper.min.js"></script>
-
 </head>
-
-
 <body>
-
 </body>
-
-
