--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" type="text/css" href="/css/webzine.css">
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
     <link rel="stylesheet" type="text/css" href="/css/vmenuModule.css">
+    <link rel="stylesheet" type="text/css" href="/css/developer.css">
  
     <script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="/js/jquery.touchswipe.min.js"></script>
