--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" type="text/css" href="/css/menu.css">
     <link rel="stylesheet" type="text/css" href="/css/vmenuModule.css">
     <link rel="stylesheet" type="text/css" href="/css/developer.css">
+    <link rel="stylesheet" type="text/css" href="/css/makeup-discussion.css">
  
     <script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="/js/jquery.touchswipe.min.js"></script>
@@ -42,6 +43,8 @@
     <script type="text/javascript" src="/js/price_range.js"></script>
     <script type="text/javascript" src="/js/swiper.min.js"></script>
     <script type="text/javascript" src="/js/vmenuModule.js"></script>
+    <script type="text/javascript" src="/js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="/js/grid.js"></script>
 </head>
 <body>
 </body>
