--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" type="text/css" href="/css/register.css">
     <link rel="stylesheet" type="text/css" href="/css/profile.css">
     <link rel="stylesheet" type="text/css" href="/css/profile_1.css">
+    <link rel="stylesheet" type="text/css" href="/css/profile-mobile.css">
     <link rel="stylesheet" type="text/css" href="/css/lift.css">
     <link rel="stylesheet" type="text/css" href="/css/tuto.css">
     <link rel="stylesheet" type="text/css" href="/css/reward.css">
