--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <script type="text/javascript" src="/js/vmenuModule.js"></script>
     <script type="text/javascript" src="/js/modernizr.custom.js"></script>
     <script type="text/javascript" src="/js/grid.js"></script>
+    <script type="text/javascript" src="/js/boostrap.js"></script>
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
 </head>
 <body>
 </body>
