--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link rel="stylesheet" type="text/css" href="/css/vmenuModule.css">
     <link rel="stylesheet" type="text/css" href="/css/developer.css">
     <link rel="stylesheet" type="text/css" href="/css/makeup-discussion.css">
+    <link rel="stylesheet" type="text/css" href="/css/choose-makeup1-layout.css">
+    <link rel="stylesheet" type="text/css" href="/css/choose-makeup1.css">
+    
  
     <script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="/js/jquery.touchswipe.min.js"></script>
