--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="/js/grid.js"></script>
     <script type="text/javascript" src="/js/boostrap.js"></script>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/jquery.sticky.js"></script>
 </head>
 <body>
 </body>
