--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" type="text/css" href="/css/makeup-discussion.css">
     <link rel="stylesheet" type="text/css" href="/css/choose-makeup1-layout.css">
     <link rel="stylesheet" type="text/css" href="/css/choose-makeup1.css">
+    <link rel="stylesheet" type="text/css" href="/css/quiz.css">
     
  
     <script type="text/javascript" src="/js/jquery-2.0.3.min.js"></script>
