change error page home

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     <script type="text/javascript" src="/js/grid.js"></script>
     <script type="text/javascript" src="/js/boostrap.js"></script>
     <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.sticky.js"></script>
-</head>
+    <!-- <script type="text/javascript" src="/js/jquery.sticky.js"></script>
+ -->
+ </head>
 <body>
 </body>
