--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
     <link rel="stylesheet" type="text/css" href="/css/login.css">
     <link rel="stylesheet" type="text/css" href="/css/detail.css">
-    <link rel="stylesheet" type="text/css" href="/css/best_selling.css">
+    <link rel="stylesheet" type="text/css" href="/css/best-selling.css">
     <link rel="stylesheet" type="text/css" href="/css/register.css">
     <link rel="stylesheet" type="text/css" href="/css/profile.css">
     <link rel="stylesheet" type="text/css" href="/css/profile_1.css">
