--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <script type="text/javascript" src="/js/main.js"></script>
     <script type="text/javascript" src="/js/jquery.flexslider-min.js"></script>
     <script type="text/javascript" src="/js/price_range.js"></script>
-    <script type="text/javascript" src="/js/swiper.min.js"></script>
     <script type="text/javascript" src="/js/vmenuModule.js"></script>
-    <script type="text/javascript" src="/js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="/js/swiper.min.js"></script>
+    <!--<script type="text/javascript" src="/js/modernizr.custom.js"></script>
     <script type="text/javascript" src="/js/grid.js"></script>
-    <script type="text/javascript" src="/js/boostrap.js"></script>
+    <script type="text/javascript" src="/js/boostrap.js"></script>-->
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="/js/jquery.sticky.js"></script>
  -->
